Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11860

Query failure due to large buffer allocation provides insufficient context

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.2.0
    • Impala 4.3.0
    • Backend
    • None
    • ghx-label-6

    Description

      When a query fails because SerializeToBuffer returns a "not OK" status in https://github.com/apache/impala/blob/4.2.0/be/src/runtime/query-state.cc#L646-L655, profile_len is always 0.

      Usually if SerializeToBuffer returns "not OK" it's because it failed to allocate more buffer space, and often has already allocated some buffer. It would help to know how much buffer is allocated, so SerializeToBuffer should update profile_len before returning an error.

      Attachments

        Issue Links

          Activity

            People

              MikaelSmith Michael Smith
              MikaelSmith Michael Smith
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: