IMPALA-11860: Add buffer size to thrift serialize error

Add the allocated buffer size to thrift serialization errors to help
debug allocation issues. TMemoryBuffer has a default maxBufferSize of 2
GiB, this can help identify if we're running into issues due to hitting
the max buffer size.

Change-Id: Ie8c1fa7d55197d9e70d21080925238ccdacbeddc
Reviewed-on: http://gerrit.cloudera.org:8080/19440
Reviewed-by: Csaba Ringhofer <csringhofer@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>